--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
         </style>
     </head>
     <body>
-
-    <h1>Dag Ruben!</h1>
-        <p>Hier is een foto van Minerva!</p>
-    <img src="https://github.com/stcoppens/stcoppens.github.io/blob/main/IMG_20200927_135820.jpg?raw=true" alt="Minerva" width="800"> 
+        <p>Site in opbouw!</p>
     </body>
 </html>
