--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             font-size: 50px;
             font-family: sans-serif;
             background-color: black;
-            color: silver;
+            color: pink;
             text-align: center
         }
         </style>
