--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         </style>
     </head>
     <body>
-        <p>Hoi! Deze website is momenteel nog in development!</p>
+        <p>Hoi Lien!</p>
     </body>
 </html>
